tests/NormalTests/paczka1/fuzzy1/76119337.err
Error in line 10: oh7b8ZhmOf S797 35,4
Error in line 12: 1Lq A249 50,1
Error in line 4: VmBLpuhoGi A249 91,2
Error in line 11: oh7b8ZhmOf S290 29,3
Error in line 33: 4r3zPJ S966 69,1
